--- a/style.css
+++ b/style.css
@@ -28,3 +28,24 @@ body {
     margin: 5px;
 }
 
+.table {
+    table {
+        width: 80%;              
+        margin: 0 auto;          
+        border-collapse: collapse;
+        border: 2px solid #333;
+      }
+  
+      th, td {
+        padding: 15px;           
+        border: 1px solid #999;
+        text-align: center;     
+      }
+  
+      caption {
+        caption-side: top;
+        font-weight: bold;
+        font-size: 20px;
+        margin-bottom: 10px;
+      }
+    }
